--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "novnc": "^1.2.0",
+    "novnc-core": "^0.3.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
