--- a/docker-manager/api/src/main/resources/application.properties
+++ b/docker-manager/api/src/main/resources/application.properties
@@ -10,3 +10,6 @@ logging.level.cn.xanderye.dockermanager=INFO
 
 user.username=admin
 user.password=123456
+
+spring.redis.host=localhost
+spring.redis.port=6379
