--- a/docker-manager/web/package.json
+++ b/docker-manager/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "echart": "^0.1.3",
     "echarts": "^5.5.1",
     "js-base64": "^2.5.2",
     "view-design": "^4.1.3",
