--- a/docker-manager/api/src/main/resources/application.properties
+++ b/docker-manager/api/src/main/resources/application.properties
@@ -13,3 +13,18 @@ user.password=123456
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+spring.datasource.url=jdbc:mysql://localhost:3306/remotedesktop?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=q49382767898
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# MyBatis 配置
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=cn.edu.zjut.entity
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.default-fetch-size=100
+mybatis.configuration.cache-enabled=true
