--- a/docker-manager/web/package.json
+++ b/docker-manager/web/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "echart": "^0.1.3",
     "echarts": "^5.5.1",
+    "element-ui": "^2.15.14",
+    "iview": "^3.5.4",
     "js-base64": "^2.5.2",
     "view-design": "^4.1.3",
     "vue": "^2.5.2",
